# newsletter-cli

./: .env.example  README.md  pyproject.toml  requirements.txt
deployment/: RUNBOOK.md  backup.sh  install_hetzner.sh
deployment/systemd/: newsletter-backup.service  newsletter-backup.timer  newsletter-cache-refresh.service  newsletter-cache-refresh.timer
examples/: basic_de.html  basic_en.html  products.json
newsletter_cli/: __init__.py  cache.py  cli.py  config.py  db.py  generator.py  interactive.py  models.py  mtp_api.py  template_assets.py  templates.py
newsletter_cli/builtin_templates/: html_newsletter_template_de.html  html_newsletter_template_en.html  mtp_music_newsletter_de.html  mtp_music_newsletter_en.html
tests/: test_cli_validation.py  test_generator_unit.py  test_integration_generate.py  test_templates.py
